# arc_vec

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: audit.yml  rust.yml
assets/benches/: README.md
assets/benches/criterion/arcvec__parallel_sort/base/: estimates.json  sample.json  tukey.json
assets/benches/criterion/arcvec__parallel_sort/new/: benchmark.json  estimates.json  sample.json  tukey.json
assets/benches/criterion/arcvec__parallel_sort/report/: index.html
assets/benches/criterion/arcvec__sort/base/: estimates.json  sample.json  tukey.json
assets/benches/criterion/arcvec__sort/new/: benchmark.json  sample.json
assets/benches/criterion/arcvec__sort/report/: index.html
assets/benches/criterion/report/: index.html
assets/benches/criterion/sort_compare/1024/report/: index.html
assets/benches/criterion/sort_compare/16384/report/: index.html
assets/benches/criterion/sort_compare/4096/report/: index.html
assets/benches/criterion/sort_compare/basic_sort/1024/base/: benchmark.json  estimates.json
assets/benches/criterion/sort_compare/basic_sort/1024/new/: sample.json  tukey.json
assets/benches/criterion/sort_compare/basic_sort/1024/report/: index.html
assets/benches/criterion/sort_compare/basic_sort/16384/base/: benchmark.json  tukey.json
assets/benches/criterion/sort_compare/basic_sort/16384/new/: estimates.json  sample.json
assets/benches/criterion/sort_compare/basic_sort/16384/report/: index.html
assets/benches/criterion/sort_compare/basic_sort/report/: index.html
assets/benches/criterion/sort_compare/rayon_parallel_sort/report/: index.html
assets/benches/criterion/sort_compare/report/: index.html
benches/: bench_main.rs
benches/benchmarks/: arc_vec_reverse_test.rs  arc_vec_sort_test.rs  mod.rs  sort_compare.rs
examples/: arc_macro.rs  hello_arc_vec.rs  reverse_arc_vec.rs  reverse_hello_world.rs  sort_comparison.rs  sort_reverse_parallel_test.rs  vec_macro_test.rs
src/: lib.rs  macro_rs.rs  main.rs
src/alloc/: arc_vec.rs  mod.rs
src/macros/: main.rs  mod.rs
src/sync/: mod.rs
tests/: arc_vec_macro_test_brackets.rs  arc_vec_macro_test_int.rs  arc_vec_macro_test_string.rs  arc_vec_new_default_test.rs  arc_vec_new_string_test.rs  test_append.rs  test_parallel_sort.rs  test_pop.rs  test_reverse_arcvec.rs  test_sort_arcvec.rs  test_with_capacity_and_grow.rs
(+20 files in other folders)
