[package]
name = "arc_vec"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
authors = ["GYoung <ytok1108@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/YoungHaKim7/arc_vec"
documentation = "https://docs.rs/arc_vec/"
# homepage = "https://docs.rs/arc_vec/latest/arc_vec/"
description = """
Expensive but experimental project created for parallel execution.
"""
categories = ["asynchronous", "os::unix-apis"]
keywords = ["arc", "futures"]

[dependencies]
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"]}
rand = "0.8.5"

[[example]]
name = "hello_arc_vec"
path = "examples/hello_arc_vec.rs"

[[example]]
name = "arc_macro"
path = "examples/arc_macro.rs"
 
[[example]]
name = "sort_comparison"
path = "examples/sort_comparison.rs"

[[bench]]
name    = "bench_main"
harness = false

[lib]
bench = false

# [badges.maintenance]
# status = "deprecated" 
